# lib-finite-table

./: CLAUDE.md  README.md  default.nix  finite-table.cabal
docs/: design.md  implementation.md
src/Data/: FiniteTable.hs
src/Data/FiniteTable/: Unboxed.hs
test/: Spec.hs
