cabal-version:      2.4
name:               finite-table
version:            0.1.0.0
synopsis:           Total array-like containers indexed by finite enumerated types
license:            BSD-3-Clause
build-type:         Simple

library
  exposed-modules:
    Data.FiniteTable
    Data.FiniteTable.Unboxed
  build-depends:
    , base
    , vector
    , lens
  hs-source-dirs:   src
  default-language:  Haskell2010

test-suite finite-table-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , finite-table
    , hspec
    , lens
  default-language:  Haskell2010
